###########################################################################
## $Id: CMakeLists.txt 4536 2013-08-05 14:30:13Z mellinger $
## Authors: juergen.mellinger@uni-tuebingen.de
## Description: Build information for AppConnectorApplications

# Set this directory name
SET( DIR_NAME "${DIR_NAME}AppConnectorApplications/" )

ADD_SUBDIRECTORY( AppConnectorExample )
ADD_SUBDIRECTORY( ParallelSwitch )
ADD_SUBDIRECTORY( SimpleExample )
