###########################################################################
## $Id: CMakeLists.txt 4849 2015-06-05 21:29:28Z pbrunner $
## Authors: griffin.milsap@gmail.com
## Description: Build information for BCI2000 and CMake

# Set this directory name
SET( DIR_NAME "${DIR_NAME}tools/" )

# Add this to the CMAKELists.txt in this directory
ADD_SUBDIRECTORY( BCI2000ViewerQtAV )
